# Projet_CPOA

./: .gitignore  README.md
ProjCPOA_Init/: CMakeLists.txt
ProjCPOA_Init-build/: Projet_Particules.cbp
ProjCPOA_Init-build/InterfaceCSG/: InterfaceCSG  InterfaceCSG.cbp
ProjCPOA_Init-build/image/: image.cbp
ProjCPOA_Init-build/image/tests/: saveTest.pgm  test_image.cbp  test_img2D  test_img2DGrey  test_img2RGB  test_imgGradient
ProjCPOA_Init-build/vectorMatrix/: vector_matrix.cbp
ProjCPOA_Init-build/vectorMatrix/tests/: test_array  test_mat  test_vec  test_vec_mat.cbp
ProjCPOA_Init/InterfaceCSG/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  renderImg.cpp  renderImg.h
ProjCPOA_Init/csg/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CsgDisk.cpp  CsgDisk.h  CsgNode.cpp  CsgNode.h  CsgOperation.cpp  CsgOperation.h  CsgPrimitive.cpp  CsgPrimitive.h  CsgRegularPolygon.cpp  CsgRegularPolygon.h  CsgTree.cpp  CsgTree.h
ProjCPOA_Init/csg/tests/: CMakeLists.txt  test_BoundingBox.cpp  test_CsgOperation.cpp  test_CsgPrimitive.cpp  test_CsgTree.cpp
ProjCPOA_Init/image/: CMakeLists.txt  Img2D.h  Img2D.hpp  Img2DGrey.cpp  Img2DGrey.h  Img2RGB.cpp  Img2RGB.h  imgGradient.cpp  imgGradient.h
ProjCPOA_Init/image/tests/: CMakeLists.txt  loadTest.pgm  test_Img2DGrey.cpp  test_img2D.cpp  test_img2RGB.cpp  test_imgGradient.cpp
ProjCPOA_Init/vectorMatrix/: Array.h  Array.hpp  Matrix33d.cpp  Matrix33d.h  ProjectVectors.h  ProjectVectors.hpp
ProjCPOA_Init/vectorMatrix/tests/: CMakeLists.txt  testMatrix.cpp  test_Array.cpp  test_vec.cpp
TestsRessources/CsgTrees/: test_loadTree.txt  test_saveTree.txt
TestsRessources/Images/: saveTest.pgm  smoothTest.pgm  subTileTest.pgm  test.ppm  testBigger.pgm
